@@ -107,8 +107,6 @@ The following functions give access to the predicate and construction objects.
 \ccGlue
 \ccMethod{Orientation_3 orientation_3_object();}{}
 \ccGlue
-\ccMethod{Collinear_3 collinear_3_object();}{}
-\ccGlue
 \ccMethod{Coplanar_orientation_3 coplanar_orientation_3_object();}{}
 \ccGlue
 \ccMethod{Side_of_oriented_sphere_3 side_of_oriented_sphere_3_object();}{}
