@@ -55,7 +55,6 @@ public:
 			     const Weighted_point & s,
 			     const Weighted_point & t) const
     {
-      //CGAL_triangulation_precondition( ! collinear(p, q, r) );
       return CGAL::power_test(p,q,r,s,t);
     }
   Oriented_side operator() ( const Weighted_point & p,
@@ -63,7 +62,6 @@ public:
 			     const Weighted_point & r,
 			     const Weighted_point & s) const
     {
-      //CGAL_triangulation_precondition( ! collinear(p, q, r) );
       return CGAL::power_test(p,q,r,s);
     }
 
@@ -71,7 +69,6 @@ public:
 			     const Weighted_point & q,
 			     const Weighted_point & r) const
     {
-      //CGAL_triangulation_precondition( ! collinear(p, q, r) );
       return CGAL::power_test(p,q,r);
     }
 };
